--- a/ChangeLog
+++ b/ChangeLog
@@ -1,26 +1,47 @@
-2012-10-06 vs. 1.2-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2013-04-15 vs. 1.2-4 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+  * All calls to the old method model.frame.aovlist now call the generic
+    to meet the requirements of CRAN.
+  * Released to CRAN.  
+
+2013-04-15 vs. 1.2-3 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+  * The source code has been deeply improved.
+  * The documentation has been deeply updated.
+  * Restrict to testers.
+
+2013-03-17 vs. 1.2-2 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+  * New options related to the dispersion of the means.
+  * Version restrict to testers.
+  * Restrict to testers.
+
+2012-12-10 vs. 1.2-1 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+  * A small bug was fixed in the function SK.nest.aovlist.R.
+    The lines that were with "[:punct:]" (wrongly) were changed to "[[:punct:]]" (correctly).
+  * New data: SPET (Split-plot in time).
+  * Restrict to testers.
+
+2012-10-06 vs. 1.2-0 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * Ivan Bezerra Allaman has began to work in the project as co-author.
   * Sergio Oliveira no longer works on the project.
   * It was made changes in the function SK.nest.aov.R. It is more easy now to study interactions.
   * The source code was improved.
   * Overall improvements in documentation and demos.
 
-2012-04-02 vs. 1.1-3 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2012-04-02 vs. 1.1-3 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * Cosmetic changes to meet the requirements of CRAN.
 
-2011-05-11 vs. 1.1-2 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2011-05-11 vs. 1.1-2 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * New data file: sorghum.
   * The notation of factorial models now agrees with Wilkinson and Rogers (1973).
   * The methods SK.nest.aov and SK.nest.aovlist were a bit enhanced to adapt to the new notation above.
   * The demos were a bit enhanced.
 
-2010-06-13 vs. 1.1-1 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2010-06-13 vs. 1.1-1 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * The S3 method to summary SK.nest objects was a bit enhanced.
 
-2010-03-28 vs. 1.1.0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2010-03-28 vs. 1.1.0 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * The classes SK and SK.nest have been simplified.
   * The S3 method to plot SK and SK.nest objects was a bit enhanced.
 	  
-2009-01-23 vs. 1.0.0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+2009-01-23 vs. 1.0.0 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
   * Released to CRAN.
 
